--- a/components/Tablist/Tablist.module.css
+++ b/components/Tablist/Tablist.module.css
@@ -30,6 +30,7 @@
     position: relative;
     top: -5rem;
     z-index: 5;
+    height: 500px;
   }
 
   .tabs {
